# bard_docx

./: document.py  pyproject.toml
base_documents/: comments.xml  empty.fodt
tests/: base.docx  debug.docx  documents.xml  error_tags.docx  tags.docx  test_document.py
tests/docx_extract/: comments.xml  commentsExtended.xml  document.xml  fontTable.xml  people.xml  settings.xml  styles.xml  webSettings.xml
tests/docx_extract/_rels/: document.xml.rels
tests/parser/: test_tag_eval.py
