[tool.poetry]
name = "bard_docx"
version = "0.1.0"
description = "Jinja-style templating for docx"
authors = ["Tim G <tgarlick101@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bs4 = "^0.0.1"
logzero = "^1.5"
lxml = "^4.3"
pyparsing = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
